src/test/ui/parser/issue-63135.rs
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
// error-pattern: aborting due to 6 previous errors
=======
// error-pattern: aborting due to 5 previous errors
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)

fn i(n{...,f #
